# film-api-semantic-kernel

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  ai_routes.py  auth_routes.py  base_routes.py  customer_routes.py  film_routes.py
core/: ai_kernel.py  config.py  db.py  deps.py  logging.py  middleware.py  security.py
core/auth/: __init__.py  auth_handler.py  jwt_service.py
core/migrations/: env.py  script.py.mako
core/migrations/filmdb/versions/: 39cac53c7136_initial.py  56aab54dec9c_add_streaming_subscription_table.py  e393d492a60a_add_streaming_available.py
core/prompts/ChatPlugin/Ask/: config.json  skprompt.txt
core/prompts/SummarizePlugin/Film/: config.json  skprompt.txt
domain/ai_kernel/: __init__.py
domain/ai_kernel/functions/: __init__.py
domain/ai_kernel/plugins/: FilmPlugin.py  __init__.py
domain/entities/: __init__.py  base.py  business.py  film.py  location.py  streaming_subscription.py
domain/models/: __init__.py  auth_models.py
domain/models/requests/: __init__.py  film.py  rental.py
domain/models/responses/: __init__.py  film.py  rental.py
domain/repositories/: __init__.py  base_repository.py  customer_repository.py  deps.py  film_repository.py  rental_repository.py
domain/services/: __init__.py  ai_chat_service.py  auth_service.py  customer_service.py  deps.py  film_service.py  rental_service.py
domain/utils/: model_converter.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_main.py
