[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-pagilla-api"
version = "1.0.0"
description = "Mini Pagilla API built with FastAPI and Semantic Kernel"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi (==0.115.13)",
    "uvicorn (==0.34.3)",
    "pydantic-settings (==2.10.1)",
    "semantic-kernel[all] (>=1.34.0,<2.0.0)",
    "alembic (==1.16.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (==0.30.0)",
    "black (==25.1.0)",
    "click (==8.2.1)",
    "flake8 (==7.3.0)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httptools (==0.6.4)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "mccabe (==0.7.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "psycopg2-binary (==2.9.10)",
    "pycodestyle (==2.14.0)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pyflakes (==3.4.0)",
    "pygments (==2.19.2)",
    "pytest (==8.4.1)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "structlog (>=25.4.0,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
]
requires-python = "=3.13.3"

[project.scripts]
mini-pagilla-api = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 88
target-version = "py310" 

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

